                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-08-2005 updated: kai-vectors.xml (Thx to Puma81)
 - 01-08-2005 fixed: dvdplayer crashed at the end of certain files
 - 01-08-2005 fixed: async audiorenderer reported somewhat wrong audiodelay to player, caused more early/late frames in mplayer
 - 01-08-2005 updated: mplayer.dll to cvs version( new ffmpeg, interlaced flag, cache uninit fix)
 - 01-08-2005 added: more memory error handling in DLLLoader, should avoid some hardlocks when mplayer crashes
 - 01-08-2005 fixed: Extra button press needed to cancel visualisation screensaver mode.
 - 01-08-2005 added: New conditional visibility tag Player.CodecInfo - true when in Visualisation and the codec info is up, or if you are in Slideshow and the file information is up.
 - 01-08-2005 added: Fading for controls and dialogs in the GUI.
 - 01-08-2005 changed: Made the flashing cursor in keyboard dialog nicer.
 - 01-08-2005 added: file and socket tracking for dlls
 - 31-07-2005 changed: cleaned up the $INFO/$LOCALIZE parser
 - 31-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 31-07-2005 fixed: [ 1245983 ] id3 cover art with a picture type outside the id3 specs is not read
 - 30-07-2005 changed: file deletion from the media windows now use the filemanager (so recursive delete works)
 - 30-07-2005 fixed: Original zoom mode was incorrect.
 - 30-07-2005 added: to mplayer.conf, cache prefill (%), before playback starts.
 - 30-07-2005 updated: German language file
 - 30-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 30-07-2005 changed: sounds.xml now uses action/window names instead of the id's to specify a sound for a action/window